@@ -43,10 +43,10 @@ class GzipMrcFile(MrcFile):
         self._iostream.close()
         self._fileobj.close()
     
-    def _read(self):
+    def _read(self, header_only=False):
         """Override _read() to ensure gzip file is in read mode."""
         self._ensure_readable_gzip_stream()
-        super(GzipMrcFile, self)._read()
+        super(GzipMrcFile, self)._read(header_only)
     
     def _ensure_readable_gzip_stream(self):
         """Make sure _iostream is a gzip stream that can be read."""
